doozy_ws_2/log/build_2024-03-29_14-03-24/pallet_docker_02/stderr.log
  File "/home/avinaash/doozy_robotics/doozy_ws_2/install/pallet_docker_02/lib/python3.8/site-packages/pallet_docker_02/moved_to_position_cli.py", line 1
    !/usr/bin/env python3
    ^
SyntaxError: invalid syntax

